fix: Delete z-index in Popup

--- a/src/components/Trip/TripFullPage/TripFullPage.module.css
+++ b/src/components/Trip/TripFullPage/TripFullPage.module.css
@@ -101,7 +101,6 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 1;
 }
 
 .modal {
